nohup.out
  File "CartPole.py", line 8
    %matplotlib inline
    ^
SyntaxError: invalid syntax
